--- a/src/app/components/Navigation/navigation.module.scss
+++ b/src/app/components/Navigation/navigation.module.scss
@@ -13,3 +13,11 @@
   font-size: 2rem;
   margin: 1rem 0;
 }
+
+.closeBtn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 1rem;
+  font-size: 2.5rem;
+}
