add styles and screens

--- a/src/app/components/Navigation/navigation.module.scss
+++ b/src/app/components/Navigation/navigation.module.scss
@@ -17,6 +17,11 @@
   margin: 1rem 0;
 }
 
+.overlayProfile {
+  background-color: $secondaryColor;
+  color: $textColor;
+}
+
 .closeBtn {
   position: absolute;
   top: 0;
