--- a/src/app/components/UploadFile/uploadFile.module.scss
+++ b/src/app/components/UploadFile/uploadFile.module.scss
@@ -1,3 +1,9 @@
+@import "~styles/colors";
+
 .fileInput {
   visibility: hidden;
+}
+
+.container {
+  background-color: rgba($disabledColor, 0.5);
 }
