--- a/src/app/components/Overlay/overlay.module.scss
+++ b/src/app/components/Overlay/overlay.module.scss
@@ -3,9 +3,7 @@
 .container {
   height: 100vh;
   width: 100vw;
-  background-color: $secondaryColor;
-  color: $textColor;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 }
