--- a/src/assets/stylesheets/app.scss
+++ b/src/assets/stylesheets/app.scss
@@ -1,5 +1,6 @@
 @import "./fontawesome.scss";
 @import "./colors.scss";
+@import "./font.scss";
 
 *,
 *:before,
@@ -12,6 +13,7 @@ html,
 body,
 #root {
   height: 100%;
+  font-family: "Roboto", Helvetica, sans-serif;
 }
 
 body {
