--- a/src/assets/stylesheets/colors.scss
+++ b/src/assets/stylesheets/colors.scss
@@ -6,4 +6,4 @@ $lightTextColor: lighten($textColor, 10%);
 $disabledColor: #c7c7c7;
 $disabledText: darken($disabledColor, 20%);
 $errorColor: #c6243d;
-$darkText: #3e3e3e;
+$darkText: #7d7d7d;
