add modal component

--- a/src/app/screens/PasswordReset/passwordReset.module.scss
+++ b/src/app/screens/PasswordReset/passwordReset.module.scss
@@ -1,8 +1,5 @@
 @import "~styles/colors";
 
-.modal {
-  background-color: white;
-  margin: 1rem;
-  padding: 1.5rem;
-  border: 1px solid $primaryColor;
+.modalBackground {
+  background-color: rgba(0, 0, 0, 0.8);
 }
