--- a/src/app/screens/Profile/profile.module.scss
+++ b/src/app/screens/Profile/profile.module.scss
@@ -6,8 +6,14 @@
 
 .info {
   margin: 0;
+  word-break: break-all;
+  text-align: left;
 }
 
 .info:first-child {
   margin-bottom: 0.5rem;
+}
+
+.bio {
+  text-align: left;
 }
