use color constant for transparent overlay

--- a/src/app/screens/CreatePost/createPost.module.scss
+++ b/src/app/screens/CreatePost/createPost.module.scss
@@ -11,7 +11,7 @@
 }
 
 .loadingContainer {
-  background-color: rgba($disabledColor, 0.5);
+  background-color: rgba($modalColor, 0.8);
 }
 
 .bottomContainer {
