--- a/src/app/screens/Feed/feed.module.scss
+++ b/src/app/screens/Feed/feed.module.scss
@@ -1,7 +1,9 @@
+@import "~styles/colors";
+
 .posts {
   margin: 1rem;
 }
 
 .modalBackground {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba($modalColor, 0.8);
 }
