add color constant

--- a/src/assets/stylesheets/colors.scss
+++ b/src/assets/stylesheets/colors.scss
@@ -7,3 +7,4 @@ $disabledColor: #c7c7c7;
 $disabledText: darken($disabledColor, 20%);
 $errorColor: #c6243d;
 $darkText: #7d7d7d;
+$modalColor: #000;
