--- a/src/app/components/Navigation/navigation.module.scss
+++ b/src/app/components/Navigation/navigation.module.scss
@@ -3,14 +3,17 @@
 .container {
   position: fixed;
   width: 100vw;
-  background-color: $secondaryColor;
+  background-color: $textColor;
   z-index: 10;
+  box-shadow: 0px 0px 2px 0px #333;
+  padding: 0.7rem 1rem;
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
-  margin: 1rem 2rem;
+  align-items: center;
+  height: 40px;
 }
 
 .overlay {
