--- a/src/app/components/Card/card.module.scss
+++ b/src/app/components/Card/card.module.scss
@@ -7,6 +7,7 @@
   color: $primaryColor;
   padding: 1rem;
   margin: 1.5rem auto;
+  width: 100%;
   max-width: 320px;
   position: relative;
 
@@ -22,6 +23,7 @@
 
 .content {
   text-align: left;
+  min-height: 5rem;
 }
 
 .deleteIcon {
