--- a/src/app/components/AudioPlayer/audioPlayer.module.scss
+++ b/src/app/components/AudioPlayer/audioPlayer.module.scss
@@ -1,3 +1,89 @@
+@import "~styles/colors";
+
+.audioPlayer {
+  padding: 1rem;
+}
+
 .audio {
   width: 100%;
+}
+
+.durationContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+  margin: 0.5rem 0;
+}
+
+.rangeContainer {
+  padding: 0 1rem;
+}
+
+.controlContainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.controlBtn {
+  font-size: 2rem;
+}
+
+.seekBtn {
+  font-size: 1.5rem;
+}
+
+@mixin thumb {
+  border: 2px solid $primaryColor;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  background-color: #fff;
+  margin: -7px 0 0 0;
+}
+
+@mixin track {
+  width: 100%;
+  cursor: pointer;
+  height: 3px;
+  background-color: lighten($primaryColor, 20%);
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  background: transparent;
+  &:focus {
+    outline: none;
+  }
+  &::-moz-focus-outer {
+    border: 0;
+  }
+  // slider button
+  &::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    @include thumb;
+  }
+  &::-moz-range-thumb {
+    @include thumb;
+  }
+  &::-ms-thumb {
+    @include thumb;
+  }
+  // slider
+  &::-webkit-slider-runnable-track {
+    @include track;
+  }
+  &::-moz-range-track {
+    @include track;
+  }
+  &::-ms-track {
+    @include track;
+    width: 100%;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
 }
